--- a/app/src/main/res/layout/list_detail.xml
+++ b/app/src/main/res/layout/list_detail.xml
@@ -5,14 +5,15 @@
 
     <TextView
         android:id="@+id/itemIndexTextView"
-        android:layout_width="20dp"
+        android:layout_width="42dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="17dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:textAlignment="center"
-        android:textSize="18sp"
+        android:textSize="24sp"
         tools:text="1" />
 
     <TextView
@@ -20,9 +21,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="17dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:layout_toEndOf="@+id/itemIndexTextView"
         android:text="Item"
-        android:textSize="18sp" />
+        android:textSize="24sp" />
 </RelativeLayout>
