--- a/app/src/main/res/layout/fragment_category_dialog.xml
+++ b/app/src/main/res/layout/fragment_category_dialog.xml
@@ -45,7 +45,7 @@
             app:layout_constraintTop_toBottomOf="@+id/categoryAddTextEdit">
 
             <Button
-                android:id="@+id/saveCancelBtn"
+                android:id="@+id/saveDeleteBtn"
                 style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
