--- a/app/src/main/res/layout/fragment_unit_edit.xml
+++ b/app/src/main/res/layout/fragment_unit_edit.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.settings.dialog.EditingSettingsFragment">
+    tools:context=".ui.settings.dialog.UnitEditFragemnt">
 
     <LinearLayout
         android:layout_width="336dp"
@@ -18,7 +18,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/idTextView"
+            android:id="@+id/idUnitTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="12"
@@ -27,7 +27,7 @@
             tools:layout_editor_absoluteY="61dp" />
 
         <TextView
-            android:id="@+id/typeTextView"
+            android:id="@+id/typeUnitTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="TextView"
@@ -42,7 +42,7 @@
 
 
             <EditText
-                android:id="@+id/valueSettingTextEdit"
+                android:id="@+id/valueUnitSettingTextEdit"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
@@ -63,20 +63,20 @@
             android:layout_marginTop="50dp">
 
             <Button
-                android:id="@+id/saveDeleteBtn"
+                android:id="@+id/saveUnitDeleteBtn"
                 style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/delete"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/saveSettingBtn"
+                app:layout_constraintEnd_toStartOf="@+id/saveUnitSettingBtn"
                 app:layout_constraintHorizontal_bias="0.48"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.0" />
 
             <Button
-                android:id="@+id/saveSettingBtn"
+                android:id="@+id/saveUnitSettingBtn"
                 style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
