--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,20 +12,25 @@
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/nav_gallery"
-        android:name="com.kamilamalikova.help.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
-
-    <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="com.kamilamalikova.help.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
-
-    <fragment
         android:id="@+id/nav_settings"
         android:name="com.kamilamalikova.help.ui.settings.SettingsFragment"
         android:label="@string/menu_settings"
         tools:layout="@layout/fragment_settings" />
+
+    <fragment
+        android:id="@+id/nav_products"
+        android:name="com.kamilamalikova.help.ui.products.ProductsFragment"
+        android:label="@string/menu_products"
+        tools:layout="@layout/fragment_products" />
+    <fragment
+        android:id="@+id/nav_terminal"
+        android:name="com.kamilamalikova.help.ui.terminal.TerminalFragment"
+        android:label="@string/menu_terminal"
+        tools:layout="@layout/fragment_terminal" />
+    <fragment
+        android:id="@+id/nav_stock"
+        android:name="com.kamilamalikova.help.ui.stock.StockFragment"
+        android:label="@string/menu_stock"
+        tools:layout="@layout/fragment_stock" />
+
 </navigation>
