--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,13 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_home">
+    app:startDestination="@+id/nav_terminal">
 
-    <fragment
-        android:id="@+id/nav_home"
-        android:name="com.kamilamalikova.help.ui.home.HomeFragment"
-        android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/nav_settings"
@@ -21,7 +16,12 @@
         android:id="@+id/nav_products"
         android:name="com.kamilamalikova.help.ui.products.ProductsFragment"
         android:label="@string/menu_products"
-        tools:layout="@layout/fragment_products" />
+        tools:layout="@layout/fragment_products" >
+        <action
+            android:id="@+id/action_product_to_add_product"
+            app:destination="@+id/addProductFragment"/>
+    </fragment>
+
     <fragment
         android:id="@+id/nav_terminal"
         android:name="com.kamilamalikova.help.ui.terminal.TerminalFragment"
@@ -32,5 +32,12 @@
         android:name="com.kamilamalikova.help.ui.stock.StockFragment"
         android:label="@string/menu_stock"
         tools:layout="@layout/fragment_stock" />
+
+    <fragment
+        android:id="@+id/addProductFragment"
+        android:name="com.kamilamalikova.help.ui.products.fragments.AddProductFragment"
+        android:label="@string/menu_stock"
+        tools:layout="@layout/fragment_add_product" />
+
 
 </navigation>
