--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -36,8 +36,20 @@
     <fragment
         android:id="@+id/addProductFragment"
         android:name="com.kamilamalikova.help.ui.products.fragments.AddProductFragment"
-        android:label="@string/menu_stock"
+        android:label="@string/menu_add_product"
         tools:layout="@layout/fragment_add_product" />
+
+    <fragment
+        android:id="@+id/nav_product_filter"
+        android:label="@string/filter"
+        tools:layout="@layout/fragment_products_filter" />
+
+    <fragment
+        android:id="@+id/nav_product_detail"
+        android:name="com.kamilamalikova.help.ui.products.fragments.ProductDetailsFragment"
+        android:label="@string/product"
+        tools:layout="@layout/fragment_product_details" />
+
 
 
 </navigation>
