--- a/app/src/main/res/layout/fragment_product_details.xml
+++ b/app/src/main/res/layout/fragment_product_details.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/addProductLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.products.fragments.AddProductFragment"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".ui.products.fragments.ProductDetailsFragment"
     android:orientation="vertical">
 
-
+    <!-- TODO: Update blank fragment layout -->
     <EditText
         android:id="@+id/addProductNameTextEdit"
         android:layout_width="match_parent"
@@ -78,15 +77,21 @@
         android:layout_marginVertical="20dp"
         android:importantForAutofill="no" />
 
-    <Button
-        android:id="@+id/addProductSaveBtn"
-        android:layout_width="wrap_content"
+    <androidx.appcompat.widget.SwitchCompat
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:text="@string/active_product"
         android:layout_marginHorizontal="20dp"
-        android:layout_marginVertical="30dp"
-        android:background="@drawable/button_border"
-        android:text="@string/save"
-        android:paddingHorizontal="10dp"/>
+        android:backgroundTint="#009688"
+        android:layout_marginVertical="20dp"
+        android:textSize="20dp"
+        />
+    <androidx.appcompat.widget.SwitchCompat
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/for_sale"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="20dp"
+        android:textSize="20dp"/>
 
-</LinearLayout>
+</androidx.appcompat.widget.LinearLayoutCompat>
