--- a/app/src/main/res/layout/fragment_product_details.xml
+++ b/app/src/main/res/layout/fragment_product_details.xml
@@ -9,26 +9,26 @@
 
     <!-- TODO: Update blank fragment layout -->
     <EditText
-        android:id="@+id/addProductNameTextEdit"
+        android:id="@+id/detailProductNameTextEdit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:layout_marginVertical="20dp"
         android:layout_marginTop="16dp"
-        android:ems="10"
+        android:backgroundTint="#009688"
+        android:enabled="false"
         android:hint="@string/productName"
+        android:importantForAutofill="no"
         android:inputType="textPersonName"
         android:textSize="20sp"
-        android:backgroundTint="#009688"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:importantForAutofill="no" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <Spinner
-        android:id="@+id/categorySpinner"
+        android:id="@+id/detailCategorySpinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
@@ -37,10 +37,11 @@
         android:backgroundTint="#009688"
         android:contentDescription="@string/category"
         android:outlineProvider="bounds"
-        android:scrollbarStyle="outsideOverlay" />
+        android:scrollbarStyle="outsideOverlay"
+        android:touchscreenBlocksFocus="true" />
 
     <Spinner
-        android:id="@+id/unitSpinner"
+        android:id="@+id/detailUnitSpinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
@@ -50,48 +51,64 @@
         android:contentDescription="@string/measureUnit"
         android:spinnerMode="dropdown" />
 
-
-    <EditText
-        android:id="@+id/costTextNumberDecimal"
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="@string/cost"
+        android:layout_marginHorizontal="20dp"
+        android:textSize="16dp"/>
+    <EditText
+        android:id="@+id/detailCostTextNumberDecimal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginVertical="20dp"
+        android:backgroundTint="#009688"
+        android:enabled="false"
         android:hint="@string/cost"
-        android:ems="10"
-        android:backgroundTint="#009688"
-        android:textSize="20sp"
+        android:importantForAutofill="no"
         android:inputType="numberDecimal"
+        android:selectAllOnFocus="false"
+        android:textSize="20sp" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/quantity"
         android:layout_marginHorizontal="20dp"
-        android:layout_marginVertical="20dp"
-        android:importantForAutofill="no" />
-
+        android:textSize="16dp"/>
     <EditText
-        android:id="@+id/quantityTextNumberDecimal"
+        android:id="@+id/detailQuantityTextNumberDecimal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/quantity"
-        android:ems="10"
-        android:textSize="20sp"
-        android:backgroundTint="#009688"
-        android:inputType="numberDecimal"
         android:layout_marginHorizontal="20dp"
         android:layout_marginVertical="20dp"
-        android:importantForAutofill="no" />
+        android:backgroundTint="#009688"
+        android:ems="10"
+        android:enabled="false"
+        android:hint="@string/quantity"
+        android:importantForAutofill="no"
+        android:inputType="numberDecimal"
+        android:textSize="20sp" />
 
     <androidx.appcompat.widget.SwitchCompat
+        android:id="@+id/detailActiveSwitchCompat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/active_product"
         android:layout_marginHorizontal="20dp"
-        android:backgroundTint="#009688"
         android:layout_marginVertical="20dp"
-        android:textSize="20dp"
-        />
+        android:backgroundTint="#009688"
+        android:enabled="false"
+        android:text="@string/active_product"
+        android:textSize="20dp" />
+
     <androidx.appcompat.widget.SwitchCompat
+        android:id="@+id/detailRestaurantSwitchCompat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/for_sale"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="20dp"
-        android:textSize="20dp"/>
+        android:enabled="false"
+        android:text="@string/for_sale"
+        android:textSize="20dp" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
