--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -15,6 +15,11 @@
             android:title="@string/menu_stock" />
 
         <item
+            android:id="@+id/nav_in_out_stock"
+            android:icon="@drawable/ic_shopping_basket_24"
+            android:title="@string/in_out" />
+
+        <item
             android:id="@+id/nav_products"
             android:icon="@android:drawable/ic_dialog_dialer"
             android:title="@string/menu_products" />
