--- a/app/src/main/res/layout/fragment_document.xml
+++ b/app/src/main/res/layout/fragment_document.xml
@@ -3,9 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.stock.fragment.AddDocFragment"
+    tools:context=".ui.stock.fragment.DocumentFragment"
     android:orientation="vertical">
-
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -14,7 +13,7 @@
         android:layout_marginVertical="10dp"/>
 
     <Spinner
-        android:id="@+id/docTypeSpinner"
+        android:id="@+id/docTypeFinalSpinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
@@ -26,19 +25,18 @@
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
-    <ListView
-        android:id="@+id/docInventoryListView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-    </ListView>
+        <ListView
+            android:id="@+id/docInventoryFinalListView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+        </ListView>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
     <Button
-        android:id="@+id/formDocBtn"
+        android:id="@+id/saveDocBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginVertical="10dp"
         android:background="@drawable/button_border"
-        android:text="@string/form_document" />
-
+        android:text="@string/save" />
 
 </LinearLayout>
