--- a/app/src/main/res/layout/fragment_out_stock.xml
+++ b/app/src/main/res/layout/fragment_out_stock.xml
@@ -1,14 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.stock.fragment.OutStockFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:orientation="vertical">
 
-</FrameLayout>
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/outStockSwipe"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <ExpandableListView
+                android:id="@+id/outStockListView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:headerDividersEnabled="true"
+                android:paddingVertical="10dp"/>
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+    </LinearLayout>
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
