--- a/app/src/main/res/layout/stock_document_item.xml
+++ b/app/src/main/res/layout/stock_document_item.xml
@@ -1,41 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="horizontal"
+    android:paddingHorizontal="20dp">
 
     <TextView
         android:id="@+id/itemDocIdTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
+        android:paddingVertical="5dp"
         android:text="1"
+        android:textColor="#143331"
         android:textSize="24sp" />
 
     <TextView
         android:id="@+id/itemDocTypeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="20dp"
         android:layout_marginEnd="10dp"
-        android:layout_toStartOf="@+id/itemDocDateTextView"
-        android:layout_toEndOf="@+id/itemDocIdTextView"
+        android:paddingVertical="5dp"
         android:text="IN/OUT"
-        android:textSize="24dp" />
+        android:textColor="#143331"
+        android:textSize="24sp" />
 
-    <EditText
+    <TextView
         android:id="@+id/itemDocDateTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="20dp"
         android:layout_marginEnd="10dp"
         android:ems="10"
-        android:inputType="date" />
+        android:paddingVertical="5dp"
+        android:textAlignment="textEnd"
+        android:textColor="#143331"
+        android:textSize="24sp"
+        android:textStyle="italic" />
 
-</RelativeLayout>
+</LinearLayout>
