--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="dialog">#E4CBE1DF</color>
     <color name="dialog2">#FFEDDDDC</color>
     <color name="main_color">#009688</color>
+    <color name="free">#26A69A</color>
 </resources>
