--- a/app/src/main/res/layout/fragment_in_stock.xml
+++ b/app/src/main/res/layout/fragment_in_stock.xml
@@ -20,6 +20,13 @@
                 android:layout_height="wrap_content"
                 android:headerDividersEnabled="true"
                 android:paddingVertical="10dp"/>
+
+            <ProgressBar
+                android:id="@+id/progressBar"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
     </LinearLayout>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
