--- a/app/src/main/res/layout/menu_product_item_layout.xml
+++ b/app/src/main/res/layout/menu_product_item_layout.xml
@@ -1,48 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="horizontal">
 
     <TextView
         android:id="@+id/menuItemIDTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="16dp"
         android:layout_weight="1"
-        android:text="1" />
+        android:text="1"
+        android:textSize="20sp"
+        android:visibility="visible" />
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/linearLayout2"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="10dp"
         android:layout_weight="1"
-        android:text="TextView" />
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="TextView" />
+        <TextView
+            android:id="@+id/menuItemNameTextView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="TextView"
+            android:textSize="20dp" />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="TextView" />
+
+    </LinearLayout>
 
     <Button
         android:id="@+id/lessBtn"
-        android:layout_width="22dp"
-        android:layout_height="29dp"
+        android:layout_width="wrap_content"
+        android:layout_height="30dp"
+        android:layout_marginHorizontal="10dp"
         android:layout_weight="1"
-        android:background="@drawable/ic_baseline_arrow_back_ios_24" />
+        android:background="@drawable/button_border"
+        android:foreground="@drawable/ic_baseline_arrow_back_ios_24"
+        android:foregroundGravity="center_vertical|center_horizontal" />
 
-    <TextView
+    <EditText
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="TextView" />
+        android:inputType="numberDecimal"
+        android:text="0.00"
+        app:layout_constraintStart_toEndOf="@+id/lessBtn"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/moreBtn"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         android:layout_weight="1"
-        android:text="Button" />
+        android:background="@drawable/button_border"
+        android:foreground="@drawable/ic_baseline_arrow_forward_ios_24"
+        android:foregroundGravity="center_vertical|center_horizontal" />
+
 </LinearLayout>
