--- a/app/src/main/res/layout/category_item_layout.xml
+++ b/app/src/main/res/layout/category_item_layout.xml
@@ -2,7 +2,8 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingHorizontal="20dp">
 
     <TextView
         android:id="@+id/itemCategoryTextView"
@@ -11,6 +12,6 @@
         android:text="@string/categories"
         android:textColor="#0A2926"
         android:textSize="24sp"
-        android:paddingHorizontal="15dp"
-        android:paddingVertical="15dp"/>
+        android:layout_marginHorizontal="15dp"
+        android:layout_marginVertical="15dp"/>
 </LinearLayout>
