--- a/app/src/main/res/layout/fragment_products_filter.xml
+++ b/app/src/main/res/layout/fragment_products_filter.xml
@@ -7,8 +7,9 @@
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:layout_width="334dp"
-        android:layout_height="343dp"
+        android:layout_marginHorizontal="15dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:background="@drawable/button_border"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -40,8 +41,8 @@
             android:layout_marginHorizontal="20dp"
             android:layout_marginVertical="20dp"
             android:autofillHints="@string/category"
-            android:backgroundTint="#009688"
             android:contentDescription="@string/category"
+            android:foreground="@drawable/border"
             android:outlineProvider="bounds"
             android:scrollbarStyle="outsideOverlay" />
 
@@ -50,30 +51,35 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="10dp"
+            android:layout_marginVertical="10dp"
             android:checked="true"
             android:text="@string/active"
-            android:textSize="20sp" />
+            android:textSize="24sp" />
 
         <CheckBox
             android:id="@+id/restaurantCheckBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="10dp"
+            android:layout_marginVertical="10dp"
             android:checked="true"
             android:text="@string/for_sale"
-            android:textSize="20sp" />
+            android:textSize="24sp" />
 
 
         <Button
             android:id="@+id/filterBtn"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginHorizontal="20dp"
             android:layout_marginVertical="30dp"
-            android:background="@drawable/button_border"
+
+            android:background="@color/main_color"
             android:paddingHorizontal="10dp"
-            android:text="@string/filter" />
+            android:text="@string/filter"
+            android:textColor="#FFFFFF"
+            android:textSize="18sp" />
 
 
     </LinearLayout>
