--- a/app/src/main/res/layout/fragment_unit_edit.xml
+++ b/app/src/main/res/layout/fragment_unit_edit.xml
@@ -7,24 +7,23 @@
     tools:context=".ui.settings.dialog.UnitEditFragemnt">
 
     <LinearLayout
-        android:layout_width="336dp"
-        android:layout_height="225dp"
-        android:background="@color/dialog"
+        android:layout_width="match_parent"
+        android:layout_marginHorizontal="20dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/button_border"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:orientation="vertical">
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
             android:id="@+id/idUnitTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="12"
-            android:visibility="invisible"
-            tools:layout_editor_absoluteX="30dp"
-            tools:layout_editor_absoluteY="61dp" />
+            android:visibility="invisible"/>
 
         <TextView
             android:id="@+id/typeUnitTextView"
@@ -34,59 +33,59 @@
             android:visibility="invisible" />
 
         <LinearLayout
-
-            android:layout_marginTop="5dp"
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-
             <EditText
                 android:id="@+id/valueUnitSettingTextEdit"
+                android:hint="@string/newValue"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginVertical="20dp"
                 android:layout_weight="1"
                 android:autofillHints=""
                 android:backgroundTint="#009688"
                 android:ems="10"
-                android:hint="@string/newValue"
                 android:inputType="textPersonName"
-                android:textColor="#009688" />
+                android:textAlignment="center"
+                android:textColor="#009688"
+                android:textSize="24sp" />
 
         </LinearLayout>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="50dp">
+            android:layout_marginVertical="40dp"
+            android:orientation="horizontal"
+            android:paddingHorizontal="10dp">
 
             <Button
                 android:id="@+id/saveUnitDeleteBtn"
-                style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/delete"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/saveUnitSettingBtn"
-                app:layout_constraintHorizontal_bias="0.48"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0" />
+                android:layout_alignParentStart="true"
+                android:layout_marginHorizontal="15dp"
+                android:background="@color/main_color"
+                android:paddingHorizontal="20dp"
+                android:textColor="#FFFFFF"
+                android:textSize="16sp"
+                android:text="@string/delete" />
 
             <Button
                 android:id="@+id/saveUnitSettingBtn"
-                style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="36dp"
-                android:text="@string/save"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.0" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                android:layout_alignParentEnd="true"
+                android:layout_marginHorizontal="15dp"
+                android:background="@color/main_color"
+                android:paddingHorizontal="20dp"
+                android:textColor="#FFFFFF"
+                android:textSize="16sp"
+                android:text="@string/save" />
+        </RelativeLayout>
 
     </LinearLayout>
 
