--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="dialog2">#FFEDDDDC</color>
     <color name="main_color">#009688</color>
     <color name="free">#26A69A</color>
+    <color name="orange">#F39233</color>
 </resources>
