--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,16 +8,22 @@
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_above="@+id/orderBtn"
     android:orientation="vertical">
     <TextView
         android:id="@+id/orderNumTextView"
         android:layout_width="match_parent"
-
         android:layout_height="wrap_content"
         android:text="@string/order_number"
         android:textAlignment="center"
         android:textColor="#11201F"
         android:textSize="24sp" />
+
+    <SearchView
+        android:id="@+id/searchMenuView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/menuSwipeRefresh"
         android:layout_width="wrap_content"
@@ -33,7 +39,9 @@
         android:id="@+id/orderBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:layout_gravity="bottom|end"
+        android:layout_marginBottom="0dp"
         android:background="@color/main_color"
         android:text="@string/order"
         android:textColor="#FFFFFF"
@@ -41,4 +49,4 @@
         android:textStyle="bold" />
 
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</RelativeLayout>
