--- a/app/src/main/res/layout/fragment_add_doc.xml
+++ b/app/src/main/res/layout/fragment_add_doc.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.stock.fragment.AddDocFragment"
     android:orientation="vertical">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
@@ -26,19 +30,23 @@
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
-    <ListView
-        android:id="@+id/docInventoryListView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-    </ListView>
+        <ListView
+            android:id="@+id/docInventoryListView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+        </ListView>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+    </LinearLayout>
+
     <Button
         android:id="@+id/formDocBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="10dp"
-        android:background="@drawable/button_border"
-        android:text="@string/form_document" />
+        android:layout_gravity="bottom|end"
+        android:background="@color/main_color"
+        android:text="@string/form_document"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp" />
 
-
-</LinearLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
