--- a/app/src/main/res/layout/fragment_add_product.xml
+++ b/app/src/main/res/layout/fragment_add_product.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/addProductLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.products.fragments.AddProductFragment"
-    android:orientation="vertical">
+    >
 
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <EditText
         android:id="@+id/addProductNameTextEdit"
@@ -88,5 +92,6 @@
         android:background="@drawable/button_border"
         android:text="@string/save"
         android:paddingHorizontal="10dp"/>
-
 </LinearLayout>
+
+</ScrollView>
