--- a/app/src/main/res/layout/fragment_product_details.xml
+++ b/app/src/main/res/layout/fragment_product_details.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.products.fragments.ProductDetailsFragment"
-    android:orientation="vertical">
+    tools:context=".ui.products.fragments.ProductDetailsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <EditText
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+     <EditText
         android:id="@+id/detailProductNameTextEdit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -110,5 +113,6 @@
         android:enabled="false"
         android:text="@string/for_sale"
         android:textSize="20dp" />
+    </LinearLayout>
 
-</androidx.appcompat.widget.LinearLayoutCompat>
+</ScrollView>
