--- a/app/src/main/res/layout/stock_product_item.xml
+++ b/app/src/main/res/layout/stock_product_item.xml
@@ -1,45 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    android:paddingHorizontal="15dp">
 
-    <CheckBox
-        android:id="@+id/stockDocProductCheckBox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginHorizontal="10dp"
-        android:layout_marginTop="15dp" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/stockDocProductNameTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginHorizontal="10dp"
-        android:layout_marginTop="15dp"
-        android:textSize="24dp"
-        android:layout_toStartOf="@+id/stockDocQtyTextView"
-        android:layout_toEndOf="@+id/stockDocProductCheckBox"
-        android:text="TextView" />
+        <CheckBox
+            android:id="@+id/stockDocProductCheckBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
 
-    <EditText
-        android:id="@+id/stockDocQtyTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginVertical="10dp"
-        android:text="TextView"
-        android:textSize="24dp"
-        android:inputType="numberDecimal"/>
+            android:layout_marginTop="15dp" />
 
-    <TextView
-        android:id="@+id/stockDocIdTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="invisible"/>
+        <TextView
+            android:id="@+id/stockDocIdTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="invisible" />
+
+        <TextView
+            android:id="@+id/stockDocProductNameTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginTop="15dp"
+            android:layout_toEndOf="@+id/stockDocProductCheckBox"
+            android:text="@string/product"
+            android:textSize="24sp" />
+    </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/stockItemQtyTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="15dp"
+            android:layout_marginEnd="10dp"
+            android:text="@string/qty"
+            android:textSize="18sp" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginVertical="5dp"
+            android:paddingStart="20dp">
+
+            <ImageButton
+                android:id="@+id/minusBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/border"
+                android:contentDescription="@string/choose_product"
+                app:srcCompat="@drawable/ic_baseline_remove_24" />
+
+            <EditText
+                android:id="@+id/stockDocQtyTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_toStartOf="@+id/addBtn"
+                android:layout_toEndOf="@+id/minusBtn"
+                android:inputType="numberDecimal"
+                android:textAlignment="center"
+                android:text="@string/qty"
+                android:textSize="20sp" />
+
+            <ImageButton
+                android:id="@+id/addBtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:background="@drawable/border"
+                android:contentDescription="@string/choose_product"
+                app:srcCompat="@drawable/ic_baseline_add_24"/>
+
+        </RelativeLayout>
+
+    </LinearLayout>
 
 
-</RelativeLayout>
+</LinearLayout>
