--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -28,6 +28,11 @@
             android:icon="@drawable/ic_baseline_settings_24"
             android:title="@string/menu_settings" />
 
+        <item
+            android:id="@+id/nav_users"
+            android:icon="@drawable/ic_baseline_people_alt_24"
+            android:title="@string/users" />
+
 
     </group>
 </menu>
