--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -108,5 +108,29 @@
         android:label="@string/tables"
         tools:layout="@layout/fragment_tables_settings" />
 
+    <fragment
+        android:id="@+id/nav_ip_settings"
+        android:name="com.kamilamalikova.help.ui.settings.tabfragments.IpFragment"
+        android:label="@string/ip"
+        tools:layout="@layout/fragment_ip" />
+
+
+    <fragment
+        android:id="@+id/nav_users"
+        android:name="com.kamilamalikova.help.ui.users.UsersFragment"
+        android:label="@string/users"
+        tools:layout="@layout/fragment_users" />
+
+    <fragment
+        android:id="@+id/nav_add_user"
+        android:name="com.kamilamalikova.help.ui.users.AddUserFragment"
+        android:label="@string/users"
+        tools:layout="@layout/fragment_add_user" />
+
+    <fragment
+        android:id="@+id/nav_user"
+        android:name="com.kamilamalikova.help.ui.users.UserFragment"
+        android:label="@string/users"
+        tools:layout="@layout/fragment_user" />
 
 </navigation>
