--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="main_color">#009688</color>
     <color name="free">#26A69A</color>
     <color name="orange">#F39233</color>
+    <color name="red">#FF0000</color>
+    <color name="black">#000000</color>
 </resources>
