--- a/app/src/main/res/layout/fragment_product_details.xml
+++ b/app/src/main/res/layout/fragment_product_details.xml
@@ -73,7 +73,7 @@
         android:inputType="numberDecimal"
         android:selectAllOnFocus="false"
         android:textSize="20sp" />
-    <TextView
+<!--    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/quantity"
@@ -91,7 +91,7 @@
         android:hint="@string/quantity"
         android:importantForAutofill="no"
         android:inputType="numberDecimal"
-        android:textSize="20sp" />
+        android:textSize="20sp" />-->
 
     <androidx.appcompat.widget.SwitchCompat
         android:id="@+id/detailActiveSwitchCompat"
