--- a/app/src/main/res/layout/table_item_layout.xml
+++ b/app/src/main/res/layout/table_item_layout.xml
@@ -51,12 +51,11 @@
                 android:id="@+id/waiterNameTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingHorizontal="15dp"
                 android:paddingTop="10dp"
                 android:text="TextView"
                 android:textAlignment="center"
                 android:textColor="#FFFCFC"
-                android:textSize="20dp" />
+                android:textSize="18sp" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
