--- a/app/src/main/res/layout/activity_ip.xml
+++ b/app/src/main/res/layout/activity_ip.xml
@@ -33,6 +33,9 @@
             android:layout_marginVertical="20dp"
             android:background="@drawable/border"
             android:ems="10"
+            android:hint="@string/ip"
+            android:textAlignment="center"
+            android:paddingVertical="10dp"
             android:inputType="textUri"
             android:paddingHorizontal="5dp"
             android:textSize="24sp" />
