--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -145,5 +145,10 @@
         android:name="com.kamilamalikova.help.ui.history.OrdersHistoryFragment"
         android:label="@string/order_history"
         tools:layout="@layout/fragment_orders_history" />
+    <fragment
+        android:id="@+id/nav_stock_item"
+        android:name="com.kamilamalikova.help.ui.stock.fragment.StockItemFragment"
+        android:label="@string/product"
+        tools:layout="@layout/fragment_stock_item" />
 
 </navigation>
